# carpet_market

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
app/application/auth/: identity_provider.py  jwt_token_provider.py
app/application/common/: clock.py  file_converter.py  file_manager.py  input_data.py  uow.py  view_manager.py  view_models.py
app/application/gateways/: carpet.py  pattern.py
app/application/view_models/: carpet.py  pattern.py
app/domain/common/: uow_tracker.py
app/domain/exceptions/: base.py  carpet.py  pattern.py  price.py  quantity.py  size.py  user.py
app/domain/factories/: pattern.py
app/domain/models/: base.py  carpet.py  order.py  pattern.py  user.py
app/domain/repositories/: carpet.py  pattern.py  user.py
app/domain/value_objects/: price.py  quantity.py  size.py  tg_contacts.py
app/entrypoint/: bot.py  bot_main.py  common.py  http_main.py  ioc.py  main.py
app/infrastructure/: utc_clock.py  view_manager.py  webp_compressor.py
app/infrastructure/auth/: auth_config.py  http_identity_provider.py  jose_jwt_token_provider.py  tg_identity_provider.py
app/infrastructure/factories/: pattern.py
app/infrastructure/persistence/: converters.py  registry.py  tables.py  uow.py
app/infrastructure/s3/: file_manager.py
app/presentation/http/: auth.py  setup.py
app/presentation/tg_bot/: consts.py  main.py  states.py
docker/: Dockerfile.back  Dockerfile.nginx  nginx.conf
src/: config.py  main.py
src/application/auth/: identity_provider.py  jwt_token_provider.py
src/application/commands/: create_pattern.py
src/application/common/: commiter.py  uow.py  uow_tracker.py
src/domain/common/: uow_tracker.py
src/domain/exceptions/: carpet.py  pattern.py  user.py
src/domain/factories/: pattern.py
src/domain/models/: base.py  carpet.py  order.py  pattern.py  user.py
src/domain/repositories/: carpet.py  pattern.py
src/domain/services/: pattern.py
src/domain/value_objects/: price.py  quantity.py  size.py
src/entities/carpet/: base_carpet.py  carpet.py  color.py  size.py
src/entities/category/: category.py
src/entrypoint/: ioc.py  main.py
src/infrastructure/: database.py  ioc.py  utc_clock.py
src/infrastructure/auth/: auth_token_gettable.py  http_identity_provider.py  jose_jwt_token_provider.py
src/infrastructure/bootstrap/: configs.py  ioc.py
tests/: conftest.py
(+64 files in other folders)
