[tool.poetry]
name = "carpet-market"
version = "0.1.0"
description = ""
authors = ["Сократ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = {version = "^2.0.36", extras = ["asyncio"]}
alembic = "^1.14.0"
pydantic = "^2.10.3"
dishka = "^1.4.2"
environs = "^14.1.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
boto3 = "^1.36.21"
python-jose = "^3.3.0"
aiogram = "^3.17.0"
orjson = "^3.10.15"
aiogram-dialog = "^2.3.1"
pillow = "^11.1.0"
pillow-heif = "^0.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

markers = [
    "domain: test related to domain layer",
    "models: test related to models",
    "value_objects: test related to value objects"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
